test_suite/alan-2022-examples/failing/001850_mutation.alan
source p begin else get q end
